<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".screen.first.FirstScreenActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/photo_icon"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="56dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_palindrome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/palindrome"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:padding="10dp"
        android:text="@string/check"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/til_palindrome"
        app:layout_constraintStart_toStartOf="@id/til_palindrome"
        app:layout_constraintTop_toBottomOf="@id/til_palindrome"
        tools:targetApi="lollipop" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/primary"
        android:padding="10dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="@id/btn_check"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>